my-apps/zot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot
  namespace: zot
spec:
  selector:
    app: zot
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
